--- a/leh-victoria-main/stely.css
+++ b/leh-victoria-main/stely.css
@@ -1,16 +1,16 @@
-header{ background-color: antiquewhite;
+header{ background-color: rgb(214, 210, 157);
     color: black;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 28px 0;
-    border-bottom: 4px solid var(--botao-ativo);
+    padding: 18px 0;
+    border-bottom: 2px solid var(--botao-ativo);
     border-left: 2px solid var(--botao-ativo);
     border-right: 2px solid var(--botao-ativo);
     border-top: none;
     }
     .botao:first-child{
-        border-radius:40px 40px 0 0 ;
+        border-radius:30px 30px 0 0 ;
     }
     
     .botoes{ 
@@ -19,7 +19,7 @@ header{ background-color: antiquewhite;
     
     .ativo{
         background-color: var(--botao-ativo);
-        border-bottom: 4px solid var(--verde);
+        border-bottom: 2px solid var(--verde);
     }
     
     .abas-textos{
@@ -27,7 +27,7 @@ header{ background-color: antiquewhite;
     }
     
     .botao:first-child{
-        border-radius:40px 40px 0 0 ;
+        border-radius:30px 30px 0 0 ;
     }
     
     .botoes{ 
@@ -36,10 +36,9 @@ header{ background-color: antiquewhite;
     
     .ativo{
         background-color: var(--botao-ativo);
-        border-bottom: 4px solid var(--verde);
+        border-bottom: 2px solid var(--verde);
     }
     
     .abas-textos{
         background-color: var(--texto-fundo) ;
     }
-    
